Change the layout of Forms - instead of e.g. {{ some_form }} use "{% for field in some_form %}" to avoid new lines between the elements - in case of hidden elements two loops can be used: .visible_fields and .hidden_fields - general layout improvements

--- a/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
@@ -10,7 +10,10 @@
         {{ plot_div }}
     {% endautoescape %}
     <form method="get">
-      {{ plotdataform }}
+      {% for field in plotdataform %}
+        {{ field.errors }}
+        {{ field.label_tag }} {{ field }} &nbsp;&nbsp;
+      {% endfor %}
       <button type="submit">Replot</button>
       <p>(Unfortunately, plotly doesn't handle timedelta objects yet, hence all durations are given from 1970-01-01)</p>
     </form>
