For the bicycle rides allow entries per bicycle - new model Bicycle - Improved logic for showing the cumulative values

--- a/cycle_django/cycle/templates/cycle_data/cycle_detail.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_detail.html
@@ -27,7 +27,7 @@
         <strong>Speed:</strong> {{ cycle.totalspeed }}</p>
     </div>
     <div style="margin-left:20px;margin-top:20px">
-      <h5>Culmulative values</h5>
+      <h5>Cumulative values</h5>
       <p><strong>Distance:</strong> {{ cycle.cumdistance }} &nbsp;
         <strong>Time:</strong> {{ cycle.cumduration }}</p>
     </div>
